# matchup-analyzer

./: .gitignore  pyproject.toml
matchup_analyzer/: __init__.py
shipp_matchups/: analyzer.py  data_sources.py
skills/matchup-analyzer/: README.md  SKILL.md
skills/matchup-analyzer/references/: gui-spec.md  setup.md
skills/matchup-analyzer/scripts/: analyzer.py
skills/matchup-analyzer/tests/: test_analyzer.py
