[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipp-matchups"
version = "0.1.0"
description = "Head-to-head team and player matchup analysis for NBA, MLB, and Soccer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]
keywords = ["sports", "matchup", "analysis", "nba", "mlb", "soccer", "shipp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/buildkit-ai/matchup-analyzer"
Repository = "https://github.com/buildkit-ai/matchup-analyzer"

[tool.hatch.build.targets.wheel]
packages = ["shipp_matchups"]
